sdk/android/v5/retrieve-conversations.mdx
---
title: "Retrieve Conversations"
description: "Fetch recent one-on-one and group conversations with their last messages in your Android app using the CometChat SDK to build a recent chats list."
---



Conversations provide the last messages for every one-on-one and group conversation the logged-in user is a part of. This makes it easy for you to build a **Recent Chat** list.

## Retrieve List of Conversations

*In other words, as a logged-in user, how do I retrieve the latest conversations that I've been a part of?*

To fetch the list of conversations, you can use the `ConversationsRequest` class. To use this class i.e. to create an object of the `ConversationsRequest` class, you need to use the `ConversationsRequestBuilder` class. The `ConversationsRequestBuilder` class allows you to set the parameters based on which the conversations are to be fetched.

The `ConversationsRequestBuilder` class allows you to set the below parameters:

### Set Limit

This method sets the limit i.e. the number of conversations that should be fetched in a single iteration.

<Tabs>
<Tab title="Java (Set Limit)">
```java
ConversationsRequest conversationRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(100)
  .build();
```

</Tab>

<Tab title="Kotlin (Set Limit)">
```kotlin
val conversationRequest = ConversationsRequestBuilder()
  .setLimit(100)
  .build()
```

</Tab>

</Tabs>

### Set Conversation Type

This method can be used to fetch user or group conversations specifically. The `conversationType` variable can hold one of the below two values:

* user - Only fetches user conversation.
* group - Only fetches group conversations.

If none is set, the list of conversations will include both user and group conversations.

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .setConversationType(CometChatConstants.CONVERSATION_TYPE_USER)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .setConversationType(CometChatConstants.CONVERSATION_TYPE_USER)
  .build()
```

</Tab>

</Tabs>

### With User and Group Tags

This method can be used to fetch the user/group tags in the `Conversation` Object. By default the value is false.

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .withUserAndGroupTags(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .withUserAndGroupTags(true)
  .build()
```

</Tab>

</Tabs>

### Set User Tags

This method fetches user conversations that have the specified tags.

<Tabs>
<Tab title="Java">
```java
List<String> tags = new ArrayList<>();
tags.add("tag_1");
conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(10)
  .setUserTags(tags)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val tags: MutableList<String> = ArrayList()
tags.add("tag_1")
conversationsRequest = ConversationsRequestBuilder()
  .setLimit(10)
  .setUserTags(tags)
  .build()
```

</Tab>

</Tabs>

### Set Group Tags

<Tabs>
<Tab title="Java">
```java
List<String> tags = new ArrayList<>();
tags.add("tag_1");
conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(10)
  .setGroupTags(tags)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val tags: MutableList<String> = ArrayList()
tags.add("tag_1")
conversationsRequest = ConversationsRequestBuilder()
  .setLimit(10)
  .setGroupTags(tags)
  .build()
```

</Tab>

</Tabs>

This method fetches group conversations that have the specified tags.

### With Tags

This method makes sure that the tags associated with the conversations are returned along with the other details of the conversations. The default value for this parameter is `false`

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .withTags(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .withTags(true)
  .build()
```

</Tab>

</Tabs>

### Set Tags

This method helps you fetch the conversations based on the specified tags.

<Tabs>
<Tab title="Java">
```java
List<String> tags = new ArrayList<>();
tags.add("archived");
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .setTags(tags)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val tags: MutableList<String> = ArrayList()
tags.add("archived")
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .setTags(tags)
  .build()
```

</Tab>

</Tabs>

### Include Blocked Users

This method helps you fetch the conversations of users whom the logged-in user has blocked.

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .includeBlockedUsers(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .includeBlockedUsers(true)
  .build()
```

</Tab>

</Tabs>

### With Blocked Info

This method helps you fetch the conversations of users whom the logged-in user has blocked.

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .withBlockedInfo(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .withBlockedInfo(true)
  .build()
```

</Tab>

</Tabs>

### Search Conversations

This method helps you search a conversation based on User or Group name.

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .setSearchKeyword("Hiking")
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .setSearchKeyword("Hiking")
  .build() 
```

</Tab>

</Tabs>

### Unread Conversations

This method helps you fetch unread conversations.

<Note>

This feature is only available with `Conversation & Advanced Search`. The `Conversation & Advanced Search` is only available in `Advanced` & `Custom` [plans](https://www.cometchat.com/pricing). If you're already on one of these plans, please enable the `Conversation & Advanced Search` from [CometChat Dashboard](https://app.cometchat.com) (Open your app, navigate to Chats -> Settings -> General Configuration)

</Note>

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder()
  .setLimit(50)
  .setUnread(true)
  .build();
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversationsRequest = ConversationsRequestBuilder()
  .setLimit(50)
  .setUnread(true)
  .build() 
```

</Tab>

</Tabs>

Finally, once all the parameters are set to the builder class, you need to call the `build()` method to get the object of the `ConversationsRequest` class.

Once you have the object of the `ConversationsRequest` class, you need to call the `fetchNext()` method. Calling this method will return a list of `Conversation` objects containing X number of conversations depending on the limit set.

A Maximum of only 50 Conversations can be fetched at once.

<Tabs>
<Tab title="Java">
```java
ConversationsRequest conversationsRequest = new ConversationsRequest.ConversationsRequestBuilder().setLimit(50).build();

conversationsRequest.fetchNext(new CometChat.CallbackListener<List<Conversation>>() {
  @Override
  public void onSuccess(List<Conversation> conversations) {
    // Hanlde list of conversations

  }

  @Override
  public void onError(CometChatException e) {
    // Hanlde failure
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
var conversationRequest: ConversationsRequest? = null
val LIMIT:Int=30

conversationRequest = ConversationsRequest.ConversationsRequestBuilder().setLimit(LIMIT).build()
conversationRequest?.fetchNext(object : CometChat.CallbackListener<List<Conversation>>() {
  override fun onSuccess(p0: List<Conversation>?) {
    //Handle List of Conversations
  }

  override fun onError(p0: CometChatException?) {
    //Handle Failure
  }
})
```

</Tab>

</Tabs>

The `Conversation` object consists of the following fields:

| Field                | Information                                                          |
| -------------------- | -------------------------------------------------------------------- |
| `conversationId`     | ID of the conversation                                               |
| `conversationType`   | Type of conversation (user/group)                                    |
| `lastMessage`        | Last message the conversation                                        |
| `conversationWith`   | `User` or `Group` object containing the details of the user or group |
| `unreadMessageCount` | Unread message count for the conversation                            |

## Tag Conversation

*In other words, as a logged-in user, how do I tag a conversation?*

To tag a specific conversation, you can use the `tagConversation()` method. The `tagConversation()` method accepts three parameters.

1. `conversationWith`: UID/GUID of the user/group whose conversation you want to fetch.

2. `conversationType`: The `conversationType` variable can hold one of the below two values:

   1. user - Only fetches user conversation.
   2. group - Only fetches group conversations.

3. `tags`: The `tags` variable will be a list of tags you want to add to a conversation.

<Tabs>
<Tab title="Java">
```java
String id = "cometchat-uid-1"; //id of the user/group
String conversationType = "user";
List<String> tags = new ArrayList<>();
tags.add("archived");

CometChat.tagConversation(id, conversationWith, tags, new CometChat.CallbackListener<Conversation>() {
  @Override
  public void onSuccess(Conversation conversation) {
    Log.d(TAG, conversation.toString());
  }

  @Override
  public void onError(CometChatException e) {
    Log.d(TAG, e.getMessage());
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
val id = "cometchat-uid-1" //id of the user/group

val conversationType = "user"
val tags: MutableList<String> = ArrayList()
tags.add("archived")

CometChat.tagConversation(id, conversationWith, tags, object : CallbackListener<Conversation>() {
    override fun onSuccess(conversation: Conversation) {
        Log.d(TAG, conversation.toString())
    }

    override fun onError(e: CometChatException) {
        Log.d(TAG, e.message)
    }
  }
)
```

</Tab>

</Tabs>

<Note>

The tags for conversations are one-way. This means that if user A tags a conversation with user B, that tag will be applied to that conversation only for user A.

</Note>

## Retrieve Single Conversation

*In other words, as a logged-in user, how do I retrieve a specific conversation?*

In order to fetch a specific conversation, you can use the `getConversation` method. The `getConversation` method accepts two parameters.

1. `conversationWith`: UID/GUID of the user/group whose conversation you want to fetch.
2. `conversationType`: The `conversationType` variable can hold one of the below two values:

* user - Only fetches user conversation.
* group - Only fetches group conversations.

<Tabs>
<Tab title="Java">
```java
CometChat.getConversation(conversationWith, conversationType, new CometChat.CallbackListener<Conversation>() {
  @Override
  public void onSuccess(Conversation conversation) {
    // Handle getConversation success
  }

  @Override
  public void onError(CometChatException e) {
    // Handle getConversation error
  }
});
```

</Tab>

<Tab title="Kotlin">
```kotlin
CometChat.getConversation(conversationWith, conversationType, new CometChat.CallbackListener<Conversation>() {
  @Override
  public void onSuccess(Conversation conversation) {

  }

  @Override
  public void onError(CometChatException e) {

  }
});
```

</Tab>

</Tabs>

## Convert Messages to Conversations

As per our [Receive Messages](/sdk/android/v5/receive-messages) guide, for real-time messages, you will always receive `Message` objects and not `Conversation` objects. Thus, you will need a mechanism to convert the `Message` object to a `Conversation` object. You can use the `getConversationFromMessage` method for this purpose.

<Tabs>
<Tab title="Java">
```java
Conversation conversation = CometChatHelper.getConversationFromMessage(message);
```

</Tab>

<Tab title="Kotlin">
```kotlin
val conversation = CometChatHelper.getConversationFromMessage(message)
```

</Tab>

</Tabs>

<Note>

While converting a `Message` object to a `Conversation` object, the `unreadMessageCount` & `tags` will not be available in the `Conversation` object. The unread message count needs to be managed in your client-side code.

</Note>
